--- a/ClickForService/App.config
+++ b/ClickForService/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+   <connectionStrings>
+		<add name="DBConnection" providerName="System.Data.SqlClient" connectionString="server=38.17.53.117,29326;database=ClickForService;user id=jnjohnny;password=Rupkotha12@;"/>
+    </connectionStrings>
+
 </configuration>
