--- a/ClickForService/App.config
+++ b/ClickForService/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
    <connectionStrings>
-		<add name="DBConnection" providerName="System.Data.SqlClient" connectionString="server=38.17.53.117,29326;database=ClickForService;user id=jnjohnny;password=Rupkotha12@;"/>
+		<add name="DBConnection" providerName="System.Data.SqlClient" connectionString="server=38.17.53.117,29326;database=ClickForService;user id=jnjohnny;password=Abcdefg123;"/>
     </connectionStrings>
 
 </configuration>
