--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogicLayer\GeneralOperations.cs" />
+    <Compile Include="DatabaseConnectionLayer\AccessProperty.cs" />
     <Compile Include="DatabaseConnectionLayer\DataAcess.cs" />
     <Compile Include="DatabaseConnectionLayer\Operations.cs" />
     <Compile Include="PresentationLayer\Dashboard.cs">
