HouseHold Service Modification

--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -79,6 +79,9 @@
     <EmbeddedResource Include="PresentationLayer\Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\HouseHoldService.resx">
+      <DependentUpon>HouseHoldService.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
