--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -56,6 +56,12 @@
     <Compile Include="PresentationLayer\ACServicing.Designer.cs">
       <DependentUpon>ACServicing.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\ChangePass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\ChangePass.Designer.cs">
+      <DependentUpon>ChangePass.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\ComputerServcing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,11 +116,23 @@
     <Compile Include="PresentationLayer\Profile.Designer.cs">
       <DependentUpon>Profile.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\ProfileIC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\ProfileIC.Designer.cs">
+      <DependentUpon>ProfileIC.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\Registration.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PresentationLayer\Registration.Designer.cs">
       <DependentUpon>Registration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PresentationLayer\ShowProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\ShowProfile.Designer.cs">
+      <DependentUpon>ShowProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -150,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\Registration.resx">
       <DependentUpon>Registration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\ShowProfile.resx">
+      <DependentUpon>ShowProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
