Change Password Form Design

--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -139,6 +139,9 @@
     <EmbeddedResource Include="PresentationLayer\ACServicing.resx">
       <DependentUpon>ACServicing.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\ChangePass.resx">
+      <DependentUpon>ChangePass.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\ComputerServcing.resx">
       <DependentUpon>ComputerServcing.cs</DependentUpon>
     </EmbeddedResource>
