--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BusinessLogicLayer\GeneralOperations.cs" />
     <Compile Include="DatabaseConnectionLayer\AccessProperty.cs" />
+    <Compile Include="DatabaseConnectionLayer\Adminlists.cs" />
     <Compile Include="DatabaseConnectionLayer\DataAcess.cs" />
     <Compile Include="DatabaseConnectionLayer\Operations.cs" />
     <Compile Include="DatabaseConnectionLayer\SPList.cs" />
