--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -57,6 +57,12 @@
     <Compile Include="PresentationLayer\ACServicing.Designer.cs">
       <DependentUpon>ACServicing.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\AddServiceProviderDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\AddServiceProviderDetails.Designer.cs">
+      <DependentUpon>AddServiceProviderDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\AdminList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +171,12 @@
     <Compile Include="PresentationLayer\ServicePList.Designer.cs">
       <DependentUpon>ServicePList.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\ServiceProviderProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\ServiceProviderProfile.Designer.cs">
+      <DependentUpon>ServiceProviderProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\ShowProfile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,6 +193,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="PresentationLayer\ACServicing.resx">
       <DependentUpon>ACServicing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\AddServiceProviderDetails.resx">
+      <DependentUpon>AddServiceProviderDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\AdminList.resx">
       <DependentUpon>AdminList.cs</DependentUpon>
@@ -235,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\ServicePList.resx">
       <DependentUpon>ServicePList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\ServiceProviderProfile.resx">
+      <DependentUpon>ServiceProviderProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\ShowProfile.resx">
       <DependentUpon>ShowProfile.cs</DependentUpon>
