--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -72,6 +72,12 @@
     <Compile Include="PresentationLayer\AdminMyProfile.Designer.cs">
       <DependentUpon>AdminMyProfile.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\BlockUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\BlockUser.Designer.cs">
+      <DependentUpon>BlockUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\CarServicing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\AdminMyProfile.resx">
       <DependentUpon>AdminMyProfile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\BlockUser.resx">
+      <DependentUpon>BlockUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\CarServicing.resx">
       <DependentUpon>CarServicing.cs</DependentUpon>
