--- a/ClickForService/ClickForService.csproj
+++ b/ClickForService/ClickForService.csproj
@@ -144,6 +144,12 @@
     <Compile Include="PresentationLayer\MobileServicing.Designer.cs">
       <DependentUpon>MobileServicing.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\Notification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\Notification.Designer.cs">
+      <DependentUpon>Notification.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\Profile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +173,12 @@
     </Compile>
     <Compile Include="PresentationLayer\RegistrationforAdmin.Designer.cs">
       <DependentUpon>RegistrationforAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PresentationLayer\SendNotification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\SendNotification.Designer.cs">
+      <DependentUpon>SendNotification.cs</DependentUpon>
     </Compile>
     <Compile Include="PresentationLayer\ServicePList.cs">
       <SubType>Form</SubType>
@@ -239,6 +251,9 @@
     <EmbeddedResource Include="PresentationLayer\MobileServicing.resx">
       <DependentUpon>MobileServicing.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\Notification.resx">
+      <DependentUpon>Notification.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\Profile.resx">
       <DependentUpon>Profile.cs</DependentUpon>
     </EmbeddedResource>
@@ -250,6 +265,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\RegistrationforAdmin.resx">
       <DependentUpon>RegistrationforAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\SendNotification.resx">
+      <DependentUpon>SendNotification.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\ServicePList.resx">
       <DependentUpon>ServicePList.cs</DependentUpon>
